--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,14 @@ Package: support.BWS
 Type: Package
 Title: Basic functions for supporting an implementation of best-worst
         scaling
-Version: 0.1-1
-Date: 2014-03-13
+Version: 0.1-2
+Date: 2014-06-22
 Author: Hideo Aizaki
-Maintainer: Hideo Aizaki <aizaki@affrc.go.jp>
+Maintainer: Hideo Aizaki <azk-r@ec.hokudai.ac.jp>
 Description: This package provides three basic functions that support an implementation of object case (Case 1) best-worst scaling: one for converting a two-level orthogonal main-effect design/balanced incomplete block design into questions; one for creating a data set suitable for analysis; and one for calculating count-based scores.
 License: GPL (>= 2)
 Suggests: DoE.base, crossdes, survival
-Packaged: 2014-03-13 11:07:18 UTC; user
+Packaged: 2014-06-22 04:08:42 UTC; user
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-03-13 15:02:50
+Date/Publication: 2014-06-22 09:26:19
